Blackpurl/src/objects/Shop_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For storing the shop business hours on each day of week</description>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Time__c</fullName>
        <label>From Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Working__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Working</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Time__c</fullName>
        <label>To Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shop Settings</label>
    <listViews>
        <fullName>Week_View</fullName>
        <columns>NAME</columns>
        <columns>Day__c</columns>
        <columns>From_Time__c</columns>
        <columns>Is_Working__c</columns>
        <columns>To_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>Week View</label>
    </listViews>
</CustomObject>